[Часть 2] — Страница с контактной информацией: валидаторы, формы и электронная почта
[Часть 2] — Страница с контактной информацией: валидаторы, формы и электронная почта

--- a/.env
+++ b/.env
@@ -21,7 +21,8 @@ APP_SECRET=4727d8a65e08a8030851817d7f0fee96
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
+MAILER_DSN=smtp://localhost
+MAILER_URL=smtp://localhost:465?encryption=ssl&auth_mode=login&username=&password=
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
