--- a/config/services.yaml
+++ b/config/services.yaml
@@ -25,3 +25,7 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+    # blogger_blog.twig.extension:
+    #     class: App\Twig\Extensions\BloggerBlogExtension
+    #     tags:
+    #         - { name: twig.extension }
