--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,13 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "doctrine/data-fixtures": "dev-master",
+        "doctrine/doctrine-fixtures-bundle": "dev-master",
         "sensio/framework-extra-bundle": "^5.5",
+        "sonata-project/admin-bundle": "^3.63",
+        "sonata-project/doctrine-orm-admin-bundle": "^3.15",
+        "sonata-project/user-bundle": "^4.5",
+        "symfony/acl-bundle": "^2.0",
         "symfony/asset": "4.4.*",
         "symfony/console": "4.4.*",
         "symfony/dotenv": "4.4.*",
@@ -27,8 +33,7 @@
         "symfony/validator": "4.4.*",
         "symfony/web-link": "4.4.*",
         "symfony/yaml": "4.4.*",
-        "doctrine/doctrine-fixtures-bundle": "dev-master",
-        "doctrine/data-fixtures" : "dev-master"
+        "twig/twig": "2.12"
     },
     "require-dev": {
         "symfony/debug-pack": "*",
