--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -1,5 +1,6 @@
 framework:
     secret: '%env(APP_SECRET)%'
+    translator: { fallbacks: ['en'] }
     #csrf_protection: true
     #http_method_override: true
 
@@ -14,3 +15,6 @@ framework:
     #fragments: true
     php_errors:
         log: true
+
+    templating:
+        engines: ['twig']
