--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -9,3 +9,8 @@ sonata_user_admin_security:
 sonata_user_admin_resetting:
     resource: '@SonataUserBundle/Resources/config/routing/admin_resetting.xml'
     prefix: /admin/resetting
+
+api:
+    type: rest
+    resource: "routing_api.yml"
+    prefix: /api
