--- a/.env
+++ b/.env
@@ -32,3 +32,7 @@ MAILER_URL=smtp://localhost:465?encryption=ssl&auth_mode=login&username=&passwor
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 DATABASE_URL=mysql://root:@127.0.0.1:3306/blog?serverVersion=5.7
 ###< doctrine/doctrine-bundle ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN=^https?://localhost(:[0-9]+)?$
+###< nelmio/cors-bundle ###
