--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,10 @@
         "ext-iconv": "*",
         "doctrine/data-fixtures": "dev-master",
         "doctrine/doctrine-fixtures-bundle": "dev-master",
+        "friendsofsymfony/rest-bundle": "^2.7",
+        "jms/serializer-bundle": "^3.5",
+        "nelmio/api-doc-bundle": "^3.6",
+        "nelmio/cors-bundle": "^2.0",
         "sensio/framework-extra-bundle": "^5.5",
         "sonata-project/admin-bundle": "^3.63",
         "sonata-project/doctrine-orm-admin-bundle": "^3.15",
@@ -22,10 +26,12 @@
         "symfony/http-client": "4.4.*",
         "symfony/intl": "4.4.*",
         "symfony/mailer": "4.4.*",
+        "symfony/maker-bundle": "^1.14",
         "symfony/monolog-bundle": "^3.1",
         "symfony/orm-pack": "*",
         "symfony/process": "4.4.*",
         "symfony/security-bundle": "4.4.*",
+        "symfony/serializer": "4.4.*",
         "symfony/serializer-pack": "*",
         "symfony/swiftmailer-bundle": "^3.4",
         "symfony/translation": "4.4.*",
@@ -33,11 +39,11 @@
         "symfony/validator": "4.4.*",
         "symfony/web-link": "4.4.*",
         "symfony/yaml": "4.4.*",
-        "twig/twig": "2.12"
+        "twig/twig": "2.12",
+        "willdurand/faker-bundle": "^1.4"
     },
     "require-dev": {
         "symfony/debug-pack": "*",
-        "symfony/maker-bundle": "^1.14",
         "symfony/phpunit-bridge": "^5.0",
         "symfony/profiler-pack": "*",
         "symfony/test-pack": "*"
@@ -84,7 +90,7 @@
     },
     "extra": {
         "symfony": {
-            "allow-contrib": false,
+            "allow-contrib": true,
             "require": "4.4.*"
         }
     }
